# q2-bowtie2

./: .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml  pyrightconfig.json  setup.py
q2_bowtie2/: __init__.py  _bowtie.py  _format.py  _transformer.py  _type.py  plugin_setup.py
