[project]
name = "q2-bowtie2"
version = "0.1.4"
description = "QIIME 2 plugin for bowtie2"
authors = [{name = "John Chase", email = "johnhchase@protonmail.com"}]
requires-python = ">=3.8.1"
dependencies = [
    "pandas>=1.5.2",
    "numpy>=1.23.5",
]

[project.entry-points."qiime2.plugins"]
"q2-bowtie2" = "q2_bowtie2.plugin_setup:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["q2_bowtie2"]

[dependency-groups]
dev = [
    "coverage>=7.1.0",
    "ruff>=0.3.0",
    "codespell>=2.2.2",
    "pytest>=7.2.1",
    "pyright>=1.1.293",
    "pytest-cov>=4.0.0",
]

[tool.pyright]
exclude = ["*nox"]
reportMissingImports = false

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["q2_bowtie2"]
